<resources>
    <string name="common_package">top.bogey.common</string>
    <string name="common_name">通用</string>
    <string name="dialog_title">提示</string>
    <string name="enter">确定</string>
    <string name="cancel">取消</string>
    <string name="copy_tips">已复制</string>
    <string name="copy_ttp_url">任务连接</string>
    <string name="hours">%d小时</string>
    <string name="minutes">%d分钟</string>
    <string name="tag_empty">未分类</string>
    <string name="tag_shortcut">快捷方式</string>
    <string name="tag_add">添加新的标签</string>
    <string name="tag_remove">确认要删除这个标签吗？</string>
    <string name="task">任务</string>
    <string name="shortcut">快捷键</string>
    <string name="blueprint">蓝图</string>
    <string name="setting">设置</string>
    <string name="select_all">全选</string>
    <string name="remove_task">删除</string>
    <string name="remove_tips">删除之后无法撤回，确定要删除吗？</string>
    <string name="export_task">导出</string>
    <string name="export_task_tips">导出并发送</string>
    <string name="move_task">标签</string>
    <string name="copy_task">复制</string>
    <string name="title">标题</string>
    <string name="des">描述</string>
    <string name="tag">标签</string>
    <string name="copy_title">%s_复制</string>
    <string name="task_add">添加任务</string>
    <string name="task_update">修改任务</string>
    <string name="task_search">搜索任务</string>
    <string name="task_tag_add">添加标签</string>
    <string name="task_import">导入任务</string>
    <string name="task_import_desc">从你选择的文件中选择需要导入的任务配置和通用自定义卡片</string>
    <string name="task_export">导出任务</string>
    <string name="task_export_desc">选择需要导出的任务配置和通用自定义卡片到你选择的文件夹中</string>
    <string name="variable_add">添加变量</string>
    <string name="variable_update">修改变量</string>
    <string name="task_running_log">查看任务日志</string>
    <string name="task_running_log_clear">清除日志</string>
    <string name="task_running_detail_log">记录日志细节</string>
    <string name="task_capture">任务截图</string>
    <string name="task_capture_tips">保存任务截图还是分享任务截图？</string>
    <string name="select_action_group_global">全局</string>
    <string name="select_action_group_private">自有</string>
    <string name="select_app_search">搜索应用</string>
    <string name="select_app_search_third">搜索%d个第三方应用</string>
    <string name="select_app_search_all">搜索%d个所有应用</string>
    <string name="select_app_activity">选择活动</string>
    <string name="select_app_search_activity">搜索活动</string>
    <string name="select_icon_search">搜索图标</string>
    <string name="select_icon_preset">预设</string>
    <string name="select_icon_app">应用</string>
    <string name="select_icon_system_app">系统应用</string>
    <string name="card_check_error_tips">存在%d个问题卡片</string>
    <string name="action_add_pin">添加针脚</string>
    <string name="action_add_execute">添加执行</string>
    <string name="action_add_des">修改备注</string>
    <string name="start_action_enable">启用</string>
    <string name="start_action_restart">任务重入</string>
    <string name="start_action_break">中断条件</string>
    <string name="manual_start_action">手动执行</string>
    <string name="manual_start_action_app">触发界面</string>
    <string name="application_start_action">进应用或界面时执行</string>
    <string name="application_start_action_break">自动中断</string>
    <string name="application_start_action_app">触发界面</string>
    <string name="time_start_action">定时执行</string>
    <string name="time_start_action_date">日期</string>
    <string name="time_start_action_time">时间</string>
    <string name="time_start_action_periodic">间隔</string>
    <string name="time_start_action_tips">未设置间隔时设置00:00为间隔24小时\n有间隔时设置00:00为移除间隔</string>
    <string name="notification_start_action">收到新通知时执行</string>
    <string name="notification_start_action_match">匹配文本</string>
    <string name="notification_start_action_notify_app">通知应用</string>
    <string name="notification_start_action_notify_text">通知文本</string>
    <string name="network_start_action">网络状态变更时执行</string>
    <string name="network_start_action_state">网络</string>
    <string name="battery_start_action">电池状态变更时执行</string>
    <string name="battery_start_action_state">状态</string>
    <string name="battery_start_action_value">电量</string>
    <string name="screen_start_action">屏幕状态变更时执行</string>
    <string name="screen_start_action_state">状态</string>
    <string name="bluetooth_start_action">蓝牙连接变更时执行</string>
    <string name="bluetooth_start_action_device">设备名</string>
    <string name="bluetooth_start_action_state">连接或断开</string>
    <string name="out_call_start_action">外部调用</string>
    <string name="out_call_start_action_url">链接</string>
    <string name="out_call_start_action_shortcut">快捷方式</string>
    <string name="if_action">如果…就…</string>
    <string name="if_action_desc">满足条件时执行，否则执行未达成节点</string>
    <string name="if_action_else">未达成</string>
    <string name="wait_if_action">等待条件成立</string>
    <string name="wait_if_action_desc">在一定时间内满足条件就执行，否则执行未达成节点</string>
    <string name="wait_if_action_timeout">超时(ms)</string>
    <string name="wait_if_action_else">未达成</string>
    <string name="find_execute_action">搜索查找</string>
    <string name="find_execute_action_timeout">超时(ms)"</string>
    <string name="find_execute_action_interval">检查间隔(ms)"</string>
    <string name="switch_action">选择执行</string>
    <string name="switch_action_desc">根据文本值执行对应针脚</string>
    <string name="switch_action_default">默认</string>
    <string name="choice_action">手动选择执行</string>
    <string name="choice_action_desc">弹出选择窗口供使用者手动选择</string>
    <string name="choice_action_default">默认</string>
    <string name="choice_action_show_anchor">屏幕锚点</string>
    <string name="choice_action_show_pos">相对锚点位置</string>
    <string name="for_loop_action">循环执行…次</string>
    <string name="for_loop_action_desc">循环多次执行节点</string>
    <string name="for_loop_action_help">从开始值执行，当前值每次执行后增加步长量，直到当前值大于结束值</string>
    <string name="for_loop_action_break">跳出循环</string>
    <string name="for_loop_action_start">开始值</string>
    <string name="for_loop_action_end">结束值</string>
    <string name="for_loop_action_step">步长</string>
    <string name="for_loop_action_current">当前值</string>
    <string name="for_loop_action_complete">完成</string>
    <string name="while_loop_action">条件循环执行</string>
    <string name="while_loop_action_desc">满足条件时执行，否则执行完成节点</string>
    <string name="while_loop_action_break">跳出循环</string>
    <string name="while_loop_action_complete">完成</string>
    <string name="sequence_action">顺序执行</string>
    <string name="sequence_action_desc">执行针脚从左到右顺序执行</string>
    <string name="random_action">随机执行</string>
    <string name="random_action_desc">从所有执行针脚中随机一个执行</string>
    <string name="random_action_times">执行次数</string>
    <string name="random_action_allow_repeat">允许重复</string>
    <string name="random_action_complete">完成</string>
    <string name="parallel_action">并行执行</string>
    <string name="parallel_action_desc">多条执行并行执行，直到超时或者达成指定完成数量</string>
    <string name="parallel_action_count">完成数</string>
    <string name="parallel_action_timeout">超时(ms)</string>
    <string name="parallel_action_result">结果</string>
    <string name="parallel_action_complete">结束</string>
    <string name="execute_task_action">执行任务</string>
    <string name="execute_task_action_task_id">任务</string>
    <string name="execute_task_action_just_cal">每次计算</string>
    <string name="custom_start_action">自定义开始</string>
    <string name="custom_end_action">自定义结束</string>
    <string name="custom_pin_name">针脚名</string>
    <string name="custom_action_single_error">这张卡不能重复添加</string>
    <string name="set_value_action">设置变量</string>
    <string name="get_value_action">获取变量</string>
    <string name="delay_action">延时</string>
    <string name="delay_action_desc">等待一段时间后再继续执行</string>
    <string name="delay_action_help">任务执行到该节点时，等待配置的时间后再继续执行之后的节点</string>
    <string name="delay_action_time">时长(ms)</string>
    <string name="log_action">输出日志</string>
    <string name="log_action_desc">输出日志到日志界面</string>
    <string name="log_action_text">日志</string>
    <string name="log_action_show">弹出提示</string>
    <string name="log_action_show_anchor">屏幕锚点</string>
    <string name="log_action_show_pos">相对锚点位置</string>
    <string name="log_action_save">保存日志</string>
    <string name="stick_screen_action">贴图到屏幕上</string>
    <string name="stick_screen_action_anchor">屏幕锚点</string>
    <string name="stick_screen_action_pos">相对锚点位置</string>
    <string name="stick_screen_action_id">标志</string>
    <string name="stick_close_action">关闭贴图</string>
    <string name="stick_close_action_id">标志</string>
    <string name="stick_close_all_action">关闭所有贴图</string>
    <string name="open_app_action">打开应用</string>
    <string name="open_app_action_desc">打开选定的应用</string>
    <string name="open_app_action_params">参数</string>
    <string name="open_uri_scheme_action">打开链接</string>
    <string name="open_uri_scheme_action_desc">打开Uri Scheme链接</string>
    <string name="open_uri_scheme_action_uri">链接</string>
    <string name="play_ringtone_action">播放铃声</string>
    <string name="play_ringtone_action_desc">播放选定的铃声</string>
    <string name="play_ringtone_action_ringtone">铃声</string>
    <string name="stop_ringtone_action">停止铃声</string>
    <string name="stop_ringtone_action_desc">停止播放铃声</string>
    <string name="stop_ringtone_action_ringtone">铃声</string>
    <string name="text_to_speak_action">文本转语音</string>
    <string name="text_to_speak_action_desc">将文本转为语音并播放</string>
    <string name="send_notification_action">自定义通知</string>
    <string name="send_notification_action_desc">发送自定义通知到通知栏</string>
    <string name="send_notification_action_title">标题</string>
    <string name="send_notification_action_content">内容</string>
    <string name="send_notification_action_icon">图标</string>
    <string name="send_notification_action_execute">点按执行</string>
    <string name="write_to_clipboard_action">复制到剪贴板</string>
    <string name="write_to_clipboard_action_desc">将针脚值复制到剪贴板</string>
    <string name="share_to_action">分享到</string>
    <string name="share_to_action_desc">将针脚值分享到选定的应用</string>
    <string name="share_to_action_as">作为</string>
    <string name="capture_switch_action">屏幕录制开关</string>
    <string name="capture_switch_action_desc">打开或关闭屏幕录制</string>
    <string name="capture_switch_action_switch">关/开</string>
    <string name="capture_switch_action_wait">等待授权</string>
    <string name="check_capture_ready_action">屏幕录制状态</string>
    <string name="check_capture_ready_action_desc">判断屏幕录制是否开启</string>
    <string name="get_date_action">获取日期</string>
    <string name="get_date_action_desc">获取当前日期</string>
    <string name="get_date_action_year">年</string>
    <string name="get_date_action_month">月</string>
    <string name="get_date_action_day">日</string>
    <string name="get_date_action_week">星期</string>
    <string name="get_time_action">获取时间</string>
    <string name="get_time_action_desc">获取当前时间</string>
    <string name="get_time_action_hour">时</string>
    <string name="get_time_action_minute">分</string>
    <string name="get_time_action_second">秒</string>
    <string name="get_time_action_millisecond">毫秒</string>
    <string name="get_time_action_timestamp">时间戳</string>
    <string name="get_current_app_action">获取当前应用</string>
    <string name="get_current_app_action_desc">获取当前运行的应用与界面</string>
    <string name="check_in_app_action">是否在应用内</string>
    <string name="picker_area_title">选择区域</string>
    <string name="picker_point_title">选择位置</string>
    <string name="point_x">X</string>
    <string name="point_y">Y</string>
    <string name="area_left">左</string>
    <string name="area_top">上</string>
    <string name="area_right">右</string>
    <string name="area_bottom">下</string>
    <string name="setting_reload_accessibility_service">重启无障碍服务</string>
    <string name="setting_write_secure_setting">设置自动重启无障碍</string>
    <string name="setting_auto_give_capture_permission">设置自动开启录屏</string>
    <string name="setting_help_doc">帮助文档</string>
    <string name="setting_help_video">视频教程</string>
</resources>