<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:hint="@string/area_left"
        app:hintTextAppearance="@style/Theme.TouchTool.TextAppearance.Hint"
        app:shapeAppearanceOverlay="@style/Theme.TouchTool.ShapeAppearance.LeftCorner.Small">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/leftEdit"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:inputType="numberSigned"
            android:padding="0dp"
            android:textSize="8sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:hint="@string/area_top"
        app:hintTextAppearance="@style/Theme.TouchTool.TextAppearance.Hint"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.None">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/topEdit"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:inputType="numberSigned"
            android:padding="0dp"
            android:textSize="8sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:hint="@string/area_right"
        app:hintTextAppearance="@style/Theme.TouchTool.TextAppearance.Hint"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.None">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rightEdit"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:inputType="numberSigned"
            android:padding="0dp"
            android:textSize="8sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:hint="@string/area_bottom"
        app:hintTextAppearance="@style/Theme.TouchTool.TextAppearance.Hint"
        app:shapeAppearanceOverlay="@style/Theme.TouchTool.ShapeAppearance.RightCorner.Small">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bottomEdit"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:inputType="numberSigned"
            android:padding="0dp"
            android:textSize="8sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pickButton"
        style="@style/Theme.TouchTool.IconButton.Outlined"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="4dp"
        app:icon="@drawable/icon_area"
        app:iconSize="12dp" />

</LinearLayout>
